# delivery-flow

./: .gitignore  README.md  README.zh-CN.md  SKILL.md  fallback.md  package.json  pyproject.toml  selection-contract.md  superpowers-backed.md  verification-scenarios.md
.claude-plugin/: plugin.json
.codex/: INSTALL.md
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.opencode/: INSTALL.md
.opencode/plugins/: delivery-flow.js
docs/: README.claude.md  README.claude.zh-CN.md  README.codex.md  README.codex.zh-CN.md  README.opencode.md  README.opencode.zh-CN.md  architecture.md  architecture.zh-CN.md  skill-validation-matrix.md  stage-2-real-task-validation.md
docs/contracts/: router-contract.md  selection-contract.zh-CN.md  superpowers-backed.md
docs/verification/: verification-scenarios.md
frontend/observability-ui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
hooks/: run-hook.cmd  session-start
scripts/: build_observability_ui.py
tests/: test_adapters.py  test_compatibility.py  test_competitive_bootstrap_contract.py  test_contracts.py  test_controller.py  test_default_use_path.py  test_docs_contract.py  test_observability_backend.py  test_observability_cli.py  test_observability_config.py  test_observability_runtime.py  test_observability_service.py  test_observability_sqlite.py  test_packaging_smoke.py  test_platform_bootstrap.py  test_public_api.py  test_runtime_engine.py  test_skill_contract.py  test_skill_validation_program.py  test_superpowers_driver.py  test_task_loop_runtime.py  test_trace.py
(+53 files in other folders)
