[project]
name = "delivery-flow"
version = "0.1.0"
description = "Main-agent workflow controller with explicit backend modes."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/delivery_flow"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
