[project]
name = "delivery-flow"
version = "0.1.0"
description = "Main-agent workflow controller with explicit backend modes."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
delivery-flow-observability = "delivery_flow.observability.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/delivery_flow"]

[tool.hatch.build.targets.wheel.force-include]
"src/delivery_flow/observability/web_dist" = "delivery_flow/observability/web_dist"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
